--- a/assets/scss/style-dark.scss
+++ b/assets/scss/style-dark.scss
@@ -489,6 +489,37 @@ a{
 
 
 //Fit Session
+.fit-session-header{
+    width: 100%;
+    height: 140px;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: $shadow;
+    position: relative;
+    img{
+        @include img-fit(100%, 140px);
+    }
+    article{
+        @include position(absolute, 0, 0, 0, 0);
+        background: linear-gradient(to right, rgba(156, 194, 131, 0.5), rgba(0, 0, 0, 0.8));
+        @include display(flex, column, center, center);
+        >h2{
+            @include texto(28px, $white, 'Roboto Black', 32px, center);
+            &:after{
+                content: "";
+                display: block;
+                width: 100px;
+                height: 3px;
+                border-radius: 5px;
+                margin: 10px auto;
+                background-color: $white;
+            }
+        }
+        >p{
+            @include texto(16px, $mediumgrey, 'Roboto Regular', 24px, center);
+        }
+    }
+}
 .fit-session-block{
 	@include bloco(100%, 100%, auto);
     box-shadow: $shadow;
