--- a/assets/scss/style-dark.scss
+++ b/assets/scss/style-dark.scss
@@ -1683,9 +1683,8 @@ a{
 	    border: 30px solid transparent;
 		#product-view-image{
 			@include img-fit(100%, auto);
-		    border-top-left-radius: 10px;
-		    border-top-right-radius: 10px;
-		    box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
+		    border-radius: 10px;
+		    box-shadow: $shadow;
 		}
 		#product-view-image-carrousel{
 			@include bloco($width: 100%, $height: auto);
@@ -1769,7 +1768,6 @@ a{
 #product-view-info-block{
 	@include bloco($width: 100%, $height: auto);
     @include display(flex, null, flex-start, flex-start);
-    background: $darkgrey;
 	.product-view-info-column{
 	    width: 33.33%;
 	    height: auto;
@@ -1799,7 +1797,6 @@ a{
 #product-view-comments-block{
     width: 100%;
     height: auto;
-    background: $darkgrey;
     box-sizing: border-box;
     border: 30px solid transparent;
 	#product-view-comments-title{
@@ -1807,7 +1804,7 @@ a{
 	}
 	.comment-row{
 	    width: 100%;
-	    background-color: $darkgreymedium;
+	    background-color: $darkgrey;
 	    border-radius: 5px;
 	    height: auto;
 	    position: relative;
