--- a/assets/scss/style-light.scss
+++ b/assets/scss/style-light.scss
@@ -1680,9 +1680,8 @@ a{
 	    border: 30px solid transparent;
 		#product-view-image{
 			@include img-fit(100%, auto);
-		    border-top-left-radius: 10px;
-		    border-top-right-radius: 10px;
-		    box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
+		    border-radius: 10px;
+		    box-shadow: $shadow;
 		}
 		#product-view-image-carrousel{
 			@include bloco($width: 100%, $height: auto);
@@ -1765,7 +1764,6 @@ a{
 #product-view-info-block{
 	@include bloco($width: 100%, $height: auto);
     @include display(flex, null, flex-start, flex-start);
-    background: $lightgrey;
 	.product-view-info-column{
 	    width: 33.33%;
 	    height: auto;
@@ -1792,15 +1790,13 @@ a{
 #product-view-comments-block{
     width: 100%;
     height: auto;
-    background: #FCFCFC;
     box-sizing: border-box;
-    border: 30px solid #FCFCFC;
 	#mments-title{
 		@include texto(21px, $black, 'Roboto Bold');
 	}
 	.comment-row{
 	    width: 100%;
-	    background-color: #FFF;
+	    background-color: $lightgrey;
 	    border-radius: 5px;
 	    height: auto;
 	    position: relative;
