--- a/assets/scss/style-dark.scss
+++ b/assets/scss/style-dark.scss
@@ -300,7 +300,7 @@ a{
     flex-direction: row;
     width: 100%;
     height: auto;
-    #shopping-cart-price-total{
+    .shopping-cart-price-total{
         @include texto(28px, $white, 'Roboto Bold', 32px, center);
     }
     .align-x{
